@@ -152,7 +152,8 @@ cgrates (0.11.0~dev) UNRELEASED; urgency=medium
   * [RouteS] Updated RouteSv1.GetRoutes API to return multiple profiles 
   * [Templates] Added support for Length Field in case of NMSlice
   * [Templates] Added support for multiple indexes
-  
+  * [AgentS] Added ~*req prefix for freeswitch extra_fields
+
  -- DanB <danb@cgrates.org>  Wed, 19 Feb 2020 13:25:52 +0200
 
 cgrates (0.10.0) UNRELEASED; urgency=medium
